--- a/views/partials/layout.njk
+++ b/views/partials/layout.njk
@@ -1,3 +1,4 @@
+{%- set displayDateFormat = 'D MMM YYYY' -%}
 <!DOCTYPE html>
 <html lang="en" class="govuk-template no-js">
 <head>
@@ -73,7 +74,8 @@
           title === 'Personal details' or
           title === 'Probation record' or
           title === 'Risk registers' or
-          title === 'Order details'
+          title === 'Order details' or
+          title === 'Breach details'
       }
     ]
   }) }}
