--- a/views/case-list.njk
+++ b/views/case-list.njk
@@ -1,3 +1,5 @@
+{%- set moment = params.moment -%}
+
 {% set tableData = {
     head: [
         { text: "Defendant" },
@@ -26,7 +28,7 @@
   {% endif %}
   {{ tableData.rows.push([
     { text: ('<a href="/case/' + item.caseNo + '/details" class="pac-defendant-link govuk-link govuk-link--no-visited-state">' + item.defendantName | escape + '</a>') | safe },
-    { text: ('<div>' + ('<span class="moj-badge moj-badge--black pac-badge">Breach</span>' | safe if item.breach) + ('<span class="moj-badge moj-badge--black pac-badge" style="">Sso</span>' | safe if item.suspendedSentenceOrder) + '</div>'+ item.probationStatus + ('<span data-cy="previously-known-termination-date" class="govuk-caption-m">Order ended ' + params.moment(item.previouslyKnownTerminationDate).format("D MMMM YYYY") | escape + '</span>' if item.previouslyKnownTerminationDate)) | safe },
+    { text: ('<div>' + ('<span class="moj-badge moj-badge--black pac-badge">Breach</span>' | safe if item.breach) + ('<span class="moj-badge moj-badge--black pac-badge" style="">Sso</span>' | safe if item.suspendedSentenceOrder) + '</div>'+ item.probationStatus + ('<span data-cy="previously-known-termination-date" class="govuk-caption-m">Order ended ' + moment(item.previouslyKnownTerminationDate).format("D MMMM YYYY") | escape + '</span>' if item.previouslyKnownTerminationDate)) | safe },
     { text: offences | join('') | safe },
     { text: item.listNo },
     { text: item.session | capitalize },
@@ -88,19 +90,19 @@
     </h1>
 
     {% set dateFormat = 'dddd D MMM' %}
-    {% set today = params.moment().format('YYYY-MM-DD') %}
-    {% set tomorrow = params.moment().add(1, 'days').format('YYYY-MM-DD') %}
-    {% set dayAfter = params.moment().add(2, 'days').format('YYYY-MM-DD') %}
-    {% set lastUpdated = params.moment(params.lastUpdated).format('[Last updated] ' + dateFormat + ' [at] hh:mm') %}
+    {% set today = moment().format('YYYY-MM-DD') %}
+    {% set tomorrow = moment().add(1, 'days').format('YYYY-MM-DD') %}
+    {% set dayAfter = moment().add(2, 'days').format('YYYY-MM-DD') %}
+    {% set lastUpdated = moment(params.lastUpdated).format('[Last updated] ' + dateFormat + ' [at] hh:mm') %}
 
     {% if params.date === today or params.date === tomorrow or params.date === dayAfter %}
         {% block subnavigation %}
 
             <span class="govuk-caption-m pac-last-updated">{{ lastUpdated }}</span>
 
-            {% set todayLong = params.moment(today).format(dateFormat) %}
-            {% set tomorrowLong = params.moment(tomorrow).format(dateFormat) %}
-            {% set dayAfterLong = params.moment(dayAfter).format(dateFormat) %}
+            {% set todayLong = moment(today).format(dateFormat) %}
+            {% set tomorrowLong = moment(tomorrow).format(dateFormat) %}
+            {% set dayAfterLong = moment(dayAfter).format(dateFormat) %}
 
             {%- from "moj/components/sub-navigation/macro.njk" import mojSubNavigation -%}
             {{ mojSubNavigation({
