--- a/views/case-summary.njk
+++ b/views/case-summary.njk
@@ -1,5 +1,6 @@
 {% extends "partials/case-details.njk" %}
 
+{%- set moment = params.moment -%}
 {%- set communityData = data.communityData -%}
 
 {% block caseContent %}
@@ -15,11 +16,10 @@
 
             <h2 class="govuk-heading-m">Appearance</h2>
             <p class="govuk-body">Court {{ data.courtRoom }}, {{ data.session | lower }} session,
-                {{ params.moment(data.sessionStartTime).format('dddd Do MMMM') }} ({{ data.listNo }}
+                {{ moment(data.sessionStartTime).format('dddd Do MMMM') }} ({{ data.listNo }}
                 listing).</p>
 
             <h2 class="govuk-heading-m govuk-!-margin-top-9">Offences</h2>
-
 
             {% set offences = [] %}
             {% for offence in data.offences %}
@@ -76,8 +76,8 @@
                         Date of birth
                     </dt>
                     <dd class="govuk-summary-list__value">
-                        {{ params.moment(data.defendantDob, 'DD-MM-YYYY').format('D MMMM YYYY') }}
-                        ({{ params.moment().diff(params.moment(data.defendantDob, 'DD-MM-YYYY'), 'years') }} years old)
+                        {{ moment(data.defendantDob, 'DD-MM-YYYY').format('D MMMM YYYY') }}
+                        ({{ moment().diff(moment(data.defendantDob, 'DD-MM-YYYY'), 'years') }} years old)
                     </dd>
                 </div>
                 <div class="govuk-summary-list__row">
