--- a/views/partials/case-details.njk
+++ b/views/partials/case-details.njk
@@ -1,6 +1,6 @@
 {% extends "./layout.njk" %}
 
-{% set dateFormat = 'dddd D MMM' %}
+{%- set moment = params.moment -%}
 
 {% set subNavItems = [{
     text: 'Case details',
@@ -31,7 +31,7 @@
 {{ breach.push(data.breach) if data.breach }}
 {% endif %}
 
-{% set dob = [params.moment(data.defendantDob, 'DD-MM-YYYY').format('Do MMMM YYYY')] %}
+{% set dob = [moment(data.defendantDob, 'DD-MM-YYYY').format('Do MMMM YYYY')] %}
 {% set probationStatus = [] %}
 {{ probationStatus.push(data.probationStatus) if data.probationStatus }}
 
