--- a/views/case-summary-record-attendance.njk
+++ b/views/case-summary-record-attendance.njk
@@ -1,9 +1,29 @@
 {%- set hideSubnav = true -%}
 {% extends "./partials/case-details.njk" %}
 
+{% set activeRequirementTableData = {
+    head: [
+        { text: "Requirement" },
+        { text: "Length" }
+    ],
+    rows: []
+} %}
+
+{% set inactiveRequirementTableData = {
+    head: [
+        { text: "Requirement" },
+        { text: "Length" },
+        { text: "Ended" },
+        { text: "Reason" }
+    ],
+    rows: []
+} %}
+
 {%- set communityData = data.communityData -%}
+
 {%- set currentOrder = {} -%}
 {%- for order in communityData.convictions if communityData.convictions | length %}
+
     {% if order.convictionId | string === params.detail | string %}
         {%- set currentOrder = order -%}
     {% endif %}
@@ -11,6 +31,20 @@
 
 {%- set moment = params.moment -%}
 {%- set preciseDiff = params.preciseDiff -%}
+
+    {%- for requirement in currentOrder.requirements %}
+        {{ activeRequirementTableData.rows.push([
+            { text: requirement.requirementTypeMainCategory.description or requirement.adRequirementTypeMainCategory.description + ' (' + (requirement.requirementTypeSubCategory.description or requirement.adRequirementTypeSubCategory.description) + ')', classes: 'govuk-!-width-one-half'},
+            { text: requirement.length + ' ' + (requirement.lengthUnit) if requirement.length else '- ', classes: 'govuk-!-width-one-half' }
+        ]) }}
+        {{ inactiveRequirementTableData.rows.push([
+            { text: requirement.requirementTypeMainCategory.description or requirement.adRequirementTypeMainCategory.description + ' (' + (requirement.requirementTypeSubCategory.description or requirement.adRequirementTypeSubCategory.description) + ')', classes: 'govuk-!-width-one-quarter'},
+            { text: requirement.length + ' ' + (requirement.lengthUnit) if requirement.length else '- ', classes: 'govuk-!-width-one-quarter' },
+            { text: moment(requirement.terminationDate, 'YYYY-MM-DD').format('D MMM YYYY') if requirement.terminationDate, classes: 'govuk-!-width-one-quarter' },
+            { text: requirement.terminationReason.description if requirement.terminationReason.description, classes: 'govuk-!-width-one-quarter' }
+        ]) }}
+    {% endfor -%}
+
 
 {% if currentOrder.active %}
     {%- set elapsedTime = params.getMonthsAndDays(moment(currentOrder.convictionDate, 'YYYY-MM-DD'), moment()) -%}
@@ -105,18 +139,42 @@
                     <p class="govuk-body-l govuk-!-font-weight-bold govuk-!-margin-0 qa-elapsed-time">{{ elapsedTime if currentOrder.active else currentOrder.sentence.terminationReason }}</p>
                 </div>
             </div>
+            {% if currentOrder.active == false %}
+                {% if currentOrder.requirements | length %}
+                    <h2 class="govuk-heading-m govuk-!-margin-top-8">Requirements</h2>
 
+                    {%- from "govuk/components/table/macro.njk" import govukTable -%}
+                    {{ govukTable(inactiveRequirementTableData) }}
+
+                {% endif %}
+            {% endif %}
         </div>
         <div class="govuk-grid-column-one-third">&nbsp;</div>
     </div>
 
+
     {% if currentOrder.active %}
+        {% if currentOrder.requirements | length %}
+            <div class="govuk-grid-row">
+            <div class="govuk-grid-column-two-thirds">
+            <h2 class="govuk-heading-m govuk-!-margin-top-8">Requirements</h2>
+
+            {%- from "govuk/components/table/macro.njk" import govukTable -%}
+            {{ govukTable(activeRequirementTableData) }}
+
+        {% endif %}
+        </div>
+        </div>
 
         <h2 class="govuk-heading-m govuk-!-margin-top-8">Appointment attendance</h2>
 
         {% if attendances.length %}
             {% set sortedAttendances = attendances | sort(true, false, 'attendanceDate') %}
-            <p class="govuk-body">Last attendance: {{ params.moment(sortedAttendances[0].attendanceDate, 'YYYY-MM-DD').format('D MMM YYYY') }} - {{ sortedAttendances[0].contact.description }} ({{ "Attended" if sortedAttendances[0].attended else "Absent" }} - {{ "Complied" if sortedAttendances[0].complied else "Failed to comply" }})</p>
+            <p class="govuk-body">Last
+                attendance: {{ params.moment(sortedAttendances[0].attendanceDate, 'YYYY-MM-DD').format('D MMM YYYY') }}
+                - {{ sortedAttendances[0].contact.description }}
+                ({{ "Attended" if sortedAttendances[0].attended else "Absent" }}
+                - {{ "Complied" if sortedAttendances[0].complied else "Failed to comply" }})</p>
         {% endif %}
 
         <div class="govuk-grid-row">
@@ -135,16 +193,24 @@
                 <h3 class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-0">Complied</h3>
             </div>
             <div class="govuk-grid-column-three-quarters">
-                <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-0"><span class="govuk-heading-m app-dashboard-count">{{ attendedAppointments.complied.flat(Infinity) | length }}</span>Attendances</p>
+                <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-0"><span
+                            class="govuk-heading-m app-dashboard-count">{{ attendedAppointments.complied.flat(Infinity) | length }}</span>Attendances
+                </p>
 
                 {% for complied in attendedComplied | sort(true, false, 'count') %}
-                    <p class="govuk-body govuk-!-margin-0"><span class="govuk-body app-dashboard-count">{{ complied.count }}</span>{{ complied.description }}</p>
+                    <p class="govuk-body govuk-!-margin-0"><span
+                                class="govuk-body app-dashboard-count">{{ complied.count }}</span>{{ complied.description }}
+                    </p>
                 {% endfor %}
 
-                <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-0 govuk-!-margin-top-2"><span class="govuk-heading-m app-dashboard-count">{{ absentAppointments.complied.flat(Infinity) | length }}</span>Absences</p>
+                <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-0 govuk-!-margin-top-2"><span
+                            class="govuk-heading-m app-dashboard-count">{{ absentAppointments.complied.flat(Infinity) | length }}</span>Absences
+                </p>
 
                 {% for complied in absentComplied | sort(true, false, 'count') %}
-                    <p class="govuk-body govuk-!-margin-0"><span class="govuk-body app-dashboard-count">{{ complied.count }}</span>{{ complied.description }}</p>
+                    <p class="govuk-body govuk-!-margin-0"><span
+                                class="govuk-body app-dashboard-count">{{ complied.count }}</span>{{ complied.description }}
+                    </p>
                 {% endfor %}
 
             </div>
@@ -157,16 +223,24 @@
                 <h3 class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-0">Failures to comply</h3>
             </div>
             <div class="govuk-grid-column-three-quarters">
-                <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-0"><span class="govuk-heading-m app-dashboard-count">{{ attendedAppointments.failed.flat(Infinity) | length }}</span>Attendances</p>
+                <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-0"><span
+                            class="govuk-heading-m app-dashboard-count">{{ attendedAppointments.failed.flat(Infinity) | length }}</span>Attendances
+                </p>
 
                 {% for failed in attendedFailed | sort(true, false, 'count') %}
-                    <p class="govuk-body govuk-!-margin-0"><span class="govuk-body app-dashboard-count">{{ failed.count }}</span>{{ failed.description }}</p>
+                    <p class="govuk-body govuk-!-margin-0"><span
+                                class="govuk-body app-dashboard-count">{{ failed.count }}</span>{{ failed.description }}
+                    </p>
                 {% endfor %}
 
-                <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-0 govuk-!-margin-top-2"><span class="govuk-heading-m app-dashboard-count">{{ absentAppointments.failed.flat(Infinity) | length }}</span>Absences</p>
+                <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-0 govuk-!-margin-top-2"><span
+                            class="govuk-heading-m app-dashboard-count">{{ absentAppointments.failed.flat(Infinity) | length }}</span>Absences
+                </p>
 
                 {% for failed in absentFailed | sort(true, false, 'count') %}
-                    <p class="govuk-body govuk-!-margin-0"><span class="govuk-body app-dashboard-count">{{ failed.count }}</span>{{ failed.description }}</p>
+                    <p class="govuk-body govuk-!-margin-0"><span
+                                class="govuk-body app-dashboard-count">{{ failed.count }}</span>{{ failed.description }}
+                    </p>
                 {% endfor %}
             </div>
         </div>
@@ -179,7 +253,8 @@
                     <h3 class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-0">Awaiting outcome</h3>
                 </div>
                 <div class="govuk-grid-column-three-quarters">
-                    <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-0"><span class="govuk-heading-m app-dashboard-count">{{ awaitingOutcome | length }}</span></p>
+                    <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-0"><span
+                                class="govuk-heading-m app-dashboard-count">{{ awaitingOutcome | length }}</span></p>
                 </div>
             </div>
         {% endif %}
@@ -220,7 +295,7 @@
                                         <dd class="govuk-summary-list__value qa-upw-attended">{{ unpaidWork.attended or '0' }}</dd>
                                     </div>
                                     <div class="govuk-summary-list__row">
-                                        <dt class="govuk-summary-list__key">Acceptable absences </dt>
+                                        <dt class="govuk-summary-list__key">Acceptable absences</dt>
                                         <dd class="govuk-summary-list__value qa-upw-acceptable">{{ unpaidWork.acceptableAbsences or '0' }}</dd>
                                     </div>
                                     <div class="govuk-summary-list__row">
@@ -230,6 +305,7 @@
                                 </dl>
                             </div>
                         </details>
+
                     {% endif %}
 
                 </div>
