--- a/views/case-summary.njk
+++ b/views/case-summary.njk
@@ -76,8 +76,8 @@
                         Date of birth
                     </dt>
                     <dd class="govuk-summary-list__value">
-                        {{ moment(data.defendantDob, 'DD-MM-YYYY').format('D MMMM YYYY') }}
-                        ({{ moment().diff(moment(data.defendantDob, 'DD-MM-YYYY'), 'years') }} years old)
+                        {{ moment(data.defendantDob, 'YYYY-MM-DD').format('D MMMM YYYY') }}
+                        ({{ moment().diff(moment(data.defendantDob, 'YYYY-MM-DD'), 'years') }} years old)
                     </dd>
                 </div>
                 <div class="govuk-summary-list__row">
