--- a/views/case-summary-record-order-breach.njk
+++ b/views/case-summary-record-order-breach.njk
@@ -7,6 +7,11 @@
 
     {%- set breach = data.communityData -%}
 
+    {%- set documentsTableData = {
+        head: [ { text: 'File' }, { text: 'Added by' }, { text: 'Date added' } ],
+        rows: []
+    } -%}
+
     {%- set prosecutionStatus = 'not ready' -%}
     {% if 'Warrant' in breach.status or 'Summons' in breach.status %}
         {%- set prosecutionStatus = 'ready' -%}
@@ -20,7 +25,7 @@
         text: "Back",
         href: '/case/' + params.caseNo + '/record/' + params.detail
     }) }}
-    
+
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
 
@@ -72,6 +77,23 @@
                     <dd class="govuk-summary-list__value">{{ breach.status }}</dd>
                 </div>
             </dl>
+
+            <h3 class="govuk-heading-m govuk-!-margin-top-8">Attachments</h3>
+            {% if breach.documents | length %}
+                <!--
+                {%- for document in breach.documents -%}
+                    {{ documentsTableData.rows.push([
+                        { text: document.fileName },
+                        { text: document.addedBy },
+                        { text: moment(document.dateAdded, 'YYYY-MM-DD').format(displayDateFormat) }
+                    ]) }}
+                {%- endfor -%}
+                -->
+                {% from "govuk/components/table/macro.njk" import govukTable %}
+                {{ govukTable(documentsTableData) }}
+            {% else %}
+                <p class="govuk-body">No attachments have been added.</p>
+            {% endif %}
 
         </div>
     </div>
