Corrected filter component display issues which would affect accessibility
Updated MOJ Frontend to v0.0.19-alpha which corrects issues relating to display and accessibilty when $govuk-global-styles is not set
Updated Cypress to v4.6.0
Removed redundant style override

Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/public/stylesheets/app/_filter.scss
+++ b/public/stylesheets/app/_filter.scss
@@ -49,6 +49,8 @@
 }
 
 .pac-filter-button {
+  @include govuk-link-common;
+  @include govuk-link-style-default;
   display: inline-block;
   border: 1px solid black;
   @include govuk-font(19);
