Corrected breach endpoint
Corrects an issue with incorrect elapsed time where an order is still set as active but has passed the conviction end date.

Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/views/case-summary-record-order.njk
+++ b/views/case-summary-record-order.njk
@@ -44,7 +44,11 @@
     ]) }}
 {% endfor -%}
 
-{%- set elapsedTime = params.getMonthsAndDays(moment(currentOrder.convictionDate, 'YYYY-MM-DD'), moment()) -%}
+{%- if moment(currentOrder.endDate, 'YYYY-MM-DD').isAfter() -%}
+    {%- set elapsedTime = params.getMonthsAndDays(moment(currentOrder.convictionDate, 'YYYY-MM-DD'), moment()) -%}
+{%- else -%}
+    {%- set elapsedTime = params.getMonthsAndDays(moment(currentOrder.convictionDate, 'YYYY-MM-DD'), moment(currentOrder.endDate, 'YYYY-MM-DD')) -%}
+{%- endif -%}
 
 {% if currentOrder.active %}
     {# Group appointments by attended/absent and complied/failed #}
