Updated headings for orders on License Updated headings for orders on Post Sentence Supervision Updated to use current LTS build of Node Updated dependencies
Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/views/case-summary-record-order.njk
+++ b/views/case-summary-record-order.njk
@@ -29,6 +29,11 @@
     {% endif %}
 {% endfor -%}
 
+{% if currentOrder.sentence.currentOrderHeaderDetail.custodialTypeCode %}
+    {%- set custodialOrder = currentOrder.sentence.currentOrderHeaderDetail -%}
+    {%- set isOnLicense = moment(custodialOrder.licenceExpiryDate, 'YYYY-MM-DD').isAfter() -%}
+{% endif %}
+
 {%- set preciseDiff = params.preciseDiff -%}
 
 {%- for requirement in currentOrder.requirements %}
@@ -121,20 +126,52 @@
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
 
-            <p class="govuk-body govuk-!-margin-top-1 govuk-!-margin-bottom-0">{{ currentOrder.offences[0].description }}</p>
+            <p class="govuk-body govuk-!-margin-top-1 govuk-!-margin-bottom-0">
+                {{ currentOrder.offences[0].description }}
+            </p>
 
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-one-third">
-                    <p class="govuk-hint govuk-!-margin-bottom-0 qa-start-title">Started</p>
-                    <p class="govuk-body-l govuk-!-font-weight-bold govuk-!-margin-0 qa-start-date">{{ moment(currentOrder.convictionDate, 'YYYY-MM-DD').format(displayDateFormat) }}</p>
+                    <p class="govuk-hint govuk-!-margin-bottom-0 qa-start-title">{{ "Status" if custodialOrder else "Started" }}</p>
+                    <p class="govuk-body-l govuk-!-font-weight-bold govuk-!-margin-0 qa-start-date">
+                        {%- if custodialOrder -%}
+                            {{  custodialOrder.status }}
+                        {% else %}
+                            {{ moment(currentOrder.convictionDate, 'YYYY-MM-DD').format(displayDateFormat) }}
+                        {% endif %}
+                    </p>
                 </div>
                 <div class="govuk-grid-column-one-third">
-                    <p class="govuk-hint govuk-!-margin-bottom-0 qa-end-title">{{ "Ends" if currentOrder.active else "Ended" }}</p>
-                    <p class="govuk-body-l govuk-!-font-weight-bold govuk-!-margin-0 qa-end-date">{{ moment(currentOrder.endDate, 'YYYY-MM-DD').format(displayDateFormat) if currentOrder.active else moment(currentOrder.sentence.terminationDate, 'YYYY-MM-DD').format(displayDateFormat) }}</p>
+                    <p class="govuk-hint govuk-!-margin-bottom-0 qa-end-title">
+                        {% if custodialOrder %}
+                            {{ "License started" if isOnLicense else "PSS started" }}
+                        {% else %}
+                            {{ "Ends" if currentOrder.active else "Ended" }}
+                        {% endif %}
+                    </p>
+                    <p class="govuk-body-l govuk-!-font-weight-bold govuk-!-margin-0 qa-end-date">
+                        {% if custodialOrder %}
+                            {{ moment(custodialOrder.disposalDate, 'YYYY-MM-DD').format(displayDateFormat) if isOnLicense else moment(custodialOrder.licenceExpiryDate, 'YYYY-MM-DD').format(displayDateFormat) }}
+                        {% else %}
+                            {{ moment(currentOrder.endDate, 'YYYY-MM-DD').format(displayDateFormat) if currentOrder.active else moment(currentOrder.sentence.terminationDate, 'YYYY-MM-DD').format(displayDateFormat) }}
+                        {% endif %}
+                    </p>
                 </div>
                 <div class="govuk-grid-column-one-third">
-                    <p class="govuk-hint govuk-!-margin-bottom-0 qa-elapsed-title">{{ "Time elapsed" if currentOrder.active else "Reason" }}</p>
-                    <p class="govuk-body-l govuk-!-font-weight-bold govuk-!-margin-0 qa-elapsed-time">{{ elapsedTime if currentOrder.active else currentOrder.sentence.terminationReason }}</p>
+                    <p class="govuk-hint govuk-!-margin-bottom-0 qa-elapsed-title">
+                        {% if custodialOrder %}
+                            {{ "License ends" if isOnLicense else "PSS ends" }}
+                        {% else %}
+                            {{ "Time elapsed" if currentOrder.active else "Reason" }}
+                        {% endif %}
+                    </p>
+                    <p class="govuk-body-l govuk-!-font-weight-bold govuk-!-margin-0 qa-elapsed-time">
+                        {% if custodialOrder %}
+                            {{ moment(custodialOrder.licenceExpiryDate, 'YYYY-MM-DD').format(displayDateFormat) if isOnLicense else moment(custodialOrder.pssEndDate, 'YYYY-MM-DD').format(displayDateFormat) }}
+                        {% else %}
+                            {{ elapsedTime if currentOrder.active else currentOrder.sentence.terminationReason }}
+                        {% endif %}
+                    </p>
                 </div>
             </div>
 
