--- a/views/case-summary-record.njk
+++ b/views/case-summary-record.njk
@@ -118,14 +118,26 @@
 
             {% if probationDocuments | length %}
                 {% set latestDocument = probationDocuments | sort(true, false, 'completedDate') | first %}
+                {% set monthsOld = moment().diff(moment(latestDocument.completedDate, 'YYYY-MM-DD'), 'months') %}
                 <h3 class="govuk-heading-s">Last pre-sentence report</h3>
                 <p class="govuk-body govuk-!-margin-bottom-0">{{ latestDocument.description }}</p>
-                <p class="govuk-hint govuk-!-margin-top-1">Delivered on {{ moment(latestDocument.completedDate, 'YYYY-MM-DD').format(displayDateFormat) }}</p>
+                <p class="govuk-hint govuk-!-margin-top-1">
+                    Delivered
+                    {% if monthsOld < 1 %}
+                        less than 1 month
+                    {% elseif monthsOld === 1 %}
+                        1 month
+                    {% elseif monthsOld > 6 %}
+                        more than 6 months
+                    {% else %}
+                        {{ monthsOld }} months
+                    {% endif %}
+                    ago</p>
             {% endif %}
-            
+
             {% if communityData.assessment | length %}
                 <h3 class="govuk-heading-s govuk-!-margin-top-6">Last OASys assessment</h3>
-                <p class="govuk-body govuk-!-margin-bottom-0">OASys Assessment {{ communityData.assessment.type  | capitalize | replace("_", " ") }}</p>
+                <p class="govuk-body govuk-!-margin-bottom-0">OASys Assessment {{ communityData.assessment.type | capitalize | replace("_", " ") }}</p>
                 <p class="govuk-hint govuk-!-margin-top-1">Completed on {{ params.moment(communityData.assessment.completed, 'YYYY-MM-DD').format('D MMM YYYY') }}</p>
             {% endif %}
         </div>
