Included PSR date inline with n ew updated copy
Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/views/case-summary-record.njk
+++ b/views/case-summary-record.njk
@@ -132,7 +132,7 @@
                     {% else %}
                         {{ monthsOld }} months
                     {% endif %}
-                    ago</p>
+                    ago ({{ moment(latestDocument.completedDate, 'YYYY-MM-DD').format(displayDateFormat) }})</p>
             {% endif %}
 
             {% if communityData.assessment | length %}
