--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -1,31 +1,32 @@
 {%- set displayDateFormat = 'D MMM YYYY' -%}
+{%- set userName = user.username | capitalize -%}
 <!DOCTYPE html>
 <html lang="en" class="govuk-template no-js">
 <head>
 
   {% set mainTitle = "Prepare a case for court" %}
 
-  {% block head %}
-    <meta charset="utf-8"/>
+    {% block head %}
+        <meta charset="utf-8"/>
 
-    <title>{{ title }} - {{ mainTitle }}</title>
+        <title>{{ title }} - {{ mainTitle }}</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-    <meta name="theme-color" content="#0b0c0c"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+        <meta name="theme-color" content="#0b0c0c"/>
 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 
-    <link rel="shortcut icon" sizes="16x16 32x32 48x48" href="/assets/images/favicon.ico" type="image/x-icon"/>
-    <link rel="mask-icon" href="/assets/images/govuk-mask-icon.svg" color="#0b0c0c">
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/govuk-apple-touch-icon-180x180.png">
-    <link rel="apple-touch-icon" sizes="167x167" href="/assets/images/govuk-apple-touch-icon-167x167.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/assets/images/govuk-apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" href="/assets/images/govuk-apple-touch-icon.png">
+        <link rel="shortcut icon" sizes="16x16 32x32 48x48" href="/assets/images/favicon.ico" type="image/x-icon"/>
+        <link rel="mask-icon" href="/assets/images/govuk-mask-icon.svg" color="#0b0c0c">
+        <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/govuk-apple-touch-icon-180x180.png">
+        <link rel="apple-touch-icon" sizes="167x167" href="/assets/images/govuk-apple-touch-icon-167x167.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/assets/images/govuk-apple-touch-icon-152x152.png">
+        <link rel="apple-touch-icon" href="/assets/images/govuk-apple-touch-icon.png">
 
-    <link type="text/css" rel="stylesheet" href="/stylesheets/style.css"/>
+        <link type="text/css" rel="stylesheet" href="/stylesheets/style.css"/>
 
-    <meta property="og:image" content="/assets/images/govuk-opengraph-image.png">
-  {% endblock %}
+        <meta property="og:image" content="/assets/images/govuk-opengraph-image.png">
+    {% endblock %}
 </head>
 <body class="govuk-template__body">
 
@@ -46,13 +47,15 @@
       text: mainTitle,
       href: '/'
     },
-    navigation: {
-      label: 'Account navigation',
-      items: [{
-        text: 'Sign out',
-        href: '/logout'
-      }]
-    }
+      navigation: {
+          label: 'Account navigation',
+          items: [{
+              text: userName
+          }, {
+              text: 'Sign out',
+              href: '/logout'
+          }]
+      }
   }) }}
 {% endblock %}
 
