--- a/views/case-list.njk
+++ b/views/case-list.njk
@@ -14,26 +14,26 @@
 
 {% for item in data %}
 
-  {% set offences = [] %}
-  {% if item.offences | length === 1 %}
-      {% for offence in item.offences %}
-          {{ offences.push(offence.offenceTitle |  escape) }}
-      {% endfor %}
-  {% elif item.offences | length %}
-    {{ offences.push('<ol class="govuk-list govuk-list--number govuk-!-margin-bottom-0">') }}
-    {% for offence in item.offences %}
-      {{ offences.push('<li>' + offence.offenceTitle |  escape + '</li>') }}
-    {% endfor %}
-    {{ offences.push('</ol>') }}
-  {% endif %}
-  {{ tableData.rows.push([
-    { text: ('<a href="/case/' + item.caseNo + '/details" class="pac-defendant-link govuk-link govuk-link--no-visited-state">' + item.defendantName | escape + '</a>') | safe },
-    { text: ('<div>' + ('<span class="moj-badge moj-badge--black pac-badge">Breach</span>' | safe if item.breach) + ('<span class="moj-badge moj-badge--black pac-badge" style="">Sso</span>' | safe if item.suspendedSentenceOrder) + '</div>'+ item.probationStatus + ('<span data-cy="previously-known-termination-date" class="govuk-caption-m">Order ended ' + moment(item.previouslyKnownTerminationDate).format("D MMMM YYYY") | escape + '</span>' if item.previouslyKnownTerminationDate)) | safe },
-    { text: offences | join('') | safe },
-    { text: item.listNo },
-    { text: item.session | capitalize },
-    { text: item.courtRoom, format: "numeric" }
-  ]) }}
+    {% set offences = [] %}
+    {% if item.offences | length === 1 %}
+        {% for offence in item.offences %}
+            {{ offences.push(offence.offenceTitle |  escape) }}
+        {% endfor %}
+        {% elif item.offences | length %}
+        {{ offences.push('<ol class="govuk-list govuk-list--number govuk-!-margin-bottom-0">') }}
+        {% for offence in item.offences %}
+            {{ offences.push('<li>' + offence.offenceTitle | escape + '</li>') }}
+        {% endfor %}
+        {{ offences.push('</ol>') }}
+    {% endif %}
+    {{ tableData.rows.push([
+        { text: ('<a href="/case/' + item.caseNo + '/details" class="pac-defendant-link govuk-link govuk-link--no-visited-state">' + item.defendantName | escape + '</a>') | safe },
+        { text: ('<div>' + ('<span class="moj-badge moj-badge--black pac-badge">Breach</span>' | safe if item.breach) + ('<span class="moj-badge moj-badge--black pac-badge" style="">Sso</span>' | safe if item.suspendedSentenceOrder) + '</div>'+ item.probationStatus + ('<span data-cy="previously-known-termination-date" class="govuk-caption-m">Order ended ' + moment(item.previouslyKnownTerminationDate).format("D MMMM YYYY") | escape + '</span>' if item.previouslyKnownTerminationDate)) | safe },
+        { text: offences | join('') | safe },
+        { text: item.listNo },
+        { text: item.session | capitalize },
+        { text: item.courtRoom, format: "numeric" }
+    ]) }}
 
 {% endfor %}
 
@@ -93,12 +93,10 @@
     {% set today = moment().format('YYYY-MM-DD') %}
     {% set tomorrow = moment().add(1, 'days').format('YYYY-MM-DD') %}
     {% set dayAfter = moment().add(2, 'days').format('YYYY-MM-DD') %}
-    {% set lastUpdated = moment(params.lastUpdated).format('[Last updated] ' + dateFormat + ' [at] hh:mm') %}
 
+    <!--
     {% if params.date === today or params.date === tomorrow or params.date === dayAfter %}
         {% block subnavigation %}
-
-            <span class="govuk-caption-m pac-last-updated">{{ lastUpdated }}</span>
 
             {% set todayLong = moment(today).format(dateFormat) %}
             {% set tomorrowLong = moment(tomorrow).format(dateFormat) %}
@@ -124,6 +122,26 @@
             }) }}
         {% endblock %}
     {% endif %}
+    -->
+
+    {%- from "components/tabs/macro.njk" import pacTabs -%}
+    {% set lastUpdated = moment(params.lastUpdated).format('[List updated:] ' + dateFormat + ' [at] hh:mm') %}
+    {{ pacTabs({
+        items: [{
+            title: 'Case list',
+            link: '/cases/' + today,
+            current: params.subsection === ''
+        }, {
+            title: 'Recently added (0)',
+            link: '/cases/' + today + '/added',
+            current: params.subsection === 'added'
+        }, {
+            title: 'Removed cases (0)',
+            link: '/cases/' + today + '/removed',
+            current: params.subsection === 'removed'
+        }],
+        status: lastUpdated + ' | Next scheduled update: Tomorrow at 9:00am'
+    }) }}
 
     {%- from "components/filter/macro.njk" import pacFilter -%}
     {{ pacFilter({
