--- a/public/stylesheets/app/all.scss
+++ b/public/stylesheets/app/all.scss
@@ -1,7 +1,7 @@
 @import "overrides";
 @import "badge";
-@import "dashboard-count";
 @import "filter";
 @import "key-details";
 @import "last-updated";
+@import "pagination";
 @import "section-break";
