Fixed failing tests
Updated tests
Corrected default values in config
Simplified package.json scripts
Removed redundant dev config from world data used in tests
Removed Dashboard route

Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -63,7 +63,7 @@
 
 {% block navigation %}
   {%- set currentCourtHtml %}
-      <span class="govuk-body govuk-!-font-size-16 govuk-!-font-weight-bold">{{ params.courtName }}</span>
+      <span class="qa-court-name govuk-body govuk-!-font-size-16 govuk-!-font-weight-bold">{{ params.courtName }}</span>
   {% endset -%}
   {%- from "moj/components/primary-navigation/macro.njk" import mojPrimaryNavigation -%}
   {{ mojPrimaryNavigation({
