--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -92,7 +92,7 @@
     {% set withinDateRange = currentDate.isBetween(moment(), params.addBusinessDays(moment(), params.totalDays - 1), 'day', '[)') %}
     {% set lastUpdated = moment(params.lastUpdated).format('[Last updated] ' + dateFormat + ' [at] hh:mm') %}
 
-    <h1 class="govuk-heading-xl govuk-!-margin-bottom-0">
+    <h1 class="qa-case-list-day govuk-heading-xl govuk-!-margin-bottom-0">
         <span class="govuk-caption-xl">Cases</span>
         {% if params.date === today %}
             Today
@@ -122,7 +122,7 @@
     {% endif %}
     </p>
 
-    <span class="govuk-caption-m">{{ lastUpdated }}</span>
+    <span class="govuk-caption-m pac-last-updated">{{ lastUpdated }}</span>
 
     {%- from "components/filter/macro.njk" import pacFilter -%}
     {{ pacFilter({
