--- a/server/views/components/tabs/template.njk
+++ b/server/views/components/tabs/template.njk
@@ -5,7 +5,7 @@
 
         {% for item in params.items %}
         <li class="govuk-tabs__list-item{% if item.current %} govuk-tabs__list-item--selected{% endif %}" role="presentation">
-            <{% if item.current %}span{% else%}a href="{{ item.link }}"{% endif%} class="govuk-tabs__tab" id="tab_{{ item.id }}" role="tab" aria-selected="true">
+            <{% if item.current %}span{% else%}a href="{{ item.link }}"{% endif%} class="govuk-tabs__tab" id="tab_{{ loop.index }}" role="tab" aria-selected="true">
                 {{ item.title }}
             </{% if item.current %}span{% else%}a{% endif%}>
         </li>
