--- a/server/views/autherror.njk
+++ b/server/views/autherror.njk
@@ -1,10 +1,8 @@
 {% extends "partials/layout.njk" %}
 
+{% set title = "Authorisation Error" %}
+
 {% block content %}
-  <h1 class="govuk-heading-l">
-    Authorisation Error
-  </h1>
-  <p>
-    You are not authorised to use this application.
-  </p>
+  <h1 class="govuk-heading-l">Authorisation Error</h1>
+  <p class="govuk-body">You are not authorised to use this application.</p>
 {% endblock %}
